# Hybrid-Rag

./: .env  .gitignore  main.py  pyproject.toml
notebooks/: langraph.ipynb  test_vdb.ipynb
src/architecture/: graph_builder.py  state.py
src/database/: vectordb.py
src/utils/: chat_model.py  data_chunking.py
